--- a/conf/supervisor/awesome.conf
+++ b/conf/supervisor/awesome.conf
@@ -1,6 +1,5 @@
 [program:awesome]
-
-command     = /usr/bin/gunicorn --bind 127.0.0.1:9000 --workers 1 --worker-class gevent wsgiapp:application
+command     = /usr/bin/gunicorn --bind 127.0.0.1:9000 --workers 1 --worker-class gevent srv.awesome.www.wsgiapp:application
 directory   = /srv/awesome/www
 user        = root
 startsecs   = 3
