--- a/conf/supervisor/awesome.conf
+++ b/conf/supervisor/awesome.conf
@@ -3,6 +3,8 @@ command     = /usr/bin/gunicorn --bind 127.0.0.1:9000 --workers 1 --worker-class
 directory   = /srv/awesome/www
 user        = root
 startsecs   = 3
+autostart   = true
+autorestart = true
 
 redirect_stderr         = true
 stdout_logfile_maxbytes = 50MB
